policygenerator/policy-sets/community/kyverno/input/multitenancy/disallowplacementrules/disallow-placementRules.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-placementrules
spec:
  validationFailureAction: audit
  background: false
  rules:
  - name: disallow-placementrules
    match:
      resources:
        kinds:
        - apps.open-cluster-management.io/v1/PlacementRule
    validate:
      message: "Using Placement Rules not allowed"
      deny: {}
